--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
-name: "website"
-title: "Yunus Emre Tapan"
+name: "Academic Webpage"
+title: "Academic Webpage"
 description: |
   Social Data Science
 output_dir: "_site"
@@ -9,8 +9,10 @@ navbar:
   right:
     - text: "About"
       href: index.html
-    - text: "blog"
+    - text: "Blog"
       href: blog.html
+    - text: "Articles"
+      href: Articles.html
     - icon: fa fa-github
       href: https://github.com/tapanyemre
     - icon: fa fa-linkedin
@@ -18,3 +20,4 @@ navbar:
     - icon: fa fa-twitter
       href: https://twitter.com/YEmreTapan
 output: distill::distill_article
+theme: "lisa_theme.css"
