--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,8 @@
-name: "Academic Webpage"
-title: "Academic Webpage"
+name: "YET"
+title: "YET"
+base_url: https://yemretapan.netlify.app/
 description: |
-  Social Data Science
+  Yunus Emre Tapan
 output_dir: "_site"
 navbar:
   logo:
@@ -27,11 +28,11 @@ navbar:
       href: talks.html
     - text: "Blog"
       href: blog.html
-    - icon: fa fa-github
-      href: https://github.com/tapanyemre
-    - icon: fa fa-linkedin
-      href: https://www.linkedin.com/in/yunus-emre-tapan-39a93648/
-    - icon: fa fa-twitter
-      href: https://twitter.com/YEmreTapan
 output: distill::distill_article
 theme: "lisa_theme.css"
+collections:
+  posts:
+    categories: true
+    categories_metadata: true
+    authors_metadata: true
+    share: [twitter, linkedin]
