--- a/_site.yml
+++ b/_site.yml
@@ -6,7 +6,7 @@ description: |
 output_dir: "_site"
 navbar:
   logo:
-    image: nu_logo.png
+    image: Images/nu_logo.png
   right:
     - text: "Home"
       href: index.html
@@ -29,7 +29,7 @@ navbar:
     - text: "Blog"
       href: blog.html
 output: distill::distill_article
-theme: "lisa_theme.css"
+theme: "Files/lisa_theme.css"
 collections:
   posts:
     categories: true
