--- a/_site.yml
+++ b/_site.yml
@@ -10,20 +10,24 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Trainings"
-      href: trainings.html
     - text: "Teaching"
       href: teaching.html
-    - text: "Leadership"
-      href: leadership.html
     - text: "Research"
-      href: projects.html
-    - text: "Publications"
-      href: publications.html
+      menu:
+          - text: "Projects"
+            href: projects.html
+          - text: "Publications"
+            href: publications.html
+          - text: "Talks"
+            href: talks.html
+    - text: "Leadership"
+      menu:
+          - text: "SICSS-Istanbul"
+            href: sicss-istanbul.html
+          - text: "Istanbul Twitter Developer Community"
+            href: twitter.html
     - text: "Awards"
       href: awards.html
-    - text: "Talks"
-      href: talks.html
     - text: "Posts"
       href: posts.html
 output: distill::distill_article
