--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "Yunus Emre Tapan"
-title: "YET"
+title: "Yunus Emre Tapan"
 base_url: https://yemretapan.netlify.app/
 description: |
   Yunus Emre Tapan
@@ -10,28 +10,16 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Teaching"
-      href: teaching.html
     - text: "Research"
-      menu:
-          - text: "Projects"
-            href: projects.html
-          - text: "Publications"
-            href: publications.html
-          - text: "Talks"
-            href: talks.html
+      href: research.html
     - text: "Leadership"
-      menu:
-          - text: "SICSS-Istanbul"
-            href: sicss-istanbul.html
-          - text: "Istanbul Twitter Developer Community"
-            href: twitter.html
+      href: leadership.html
     - text: "Awards"
       href: awards.html
     - text: "Posts"
       href: posts.html
 output: distill::distill_article
-theme: "Files/lisa_theme.css"
+theme: "Files/tapan_theme.css"
 collections:
   posts:
     categories: true
